# equirectangular_convertor

./: CMakeLists.txt  README.md  package.xml
include/equirectangular_convertor/: equirectangular_convertor.h  projection_mode.h
launch/: equirectangular_convertor.launch
src/: equirectangular_convertor.cpp  equirectangular_convertor_node.cpp
